<resources>
    <string name="app_name">SplitLanzou</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload">上传文件</string>
    <string name="file_desc">%1$s %2$s %3$d下载</string>
    <string name="mkdir">新建</string>
    <string name="detail">详情</string>
    <string name="download">下载</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>
    <string name="go_login">去登录</string>
    <string name="file_pwd">开启密码</string>
    <string name="share_file">分享文件</string>
    <string name="close">关闭</string>
    <string name="manger_account">管理账号</string>
    <string name="resolve_file">解析文件</string>
    <string name="recycle_bin">回收站</string>
    <string name="restore_all">恢复所有</string>
    <string name="delete_all">删除所有</string>
    <string name="save_setting">保存设置</string>
    <string name="copy_download_url">复制直链</string>
    <string name="resolve_tips">注意：可能下载后文件名不对，记得自己改后缀，请输入蓝奏云原始的分享地址。</string>

    <!-- 界面状态 -->
    <string name="empty">空空如也</string>
    <string name="error">加载失败，可能网络问题或服务器维护中，请尝试点击刷新，如多次失败请切换线路或换源</string>
    <string name="reload">重载</string>
    <string name="error_tips">加载失败了，请稍后重试，点击刷新</string>
    <string name="empty_tips">这里空空如也哦！</string>
    <string name="refresh_tips">点击刷新</string>

    <!-- activity -->
    <string name="title_resolve_folder">解析文件夹</string>
    <string name="title_user_center">个人中心</string>
    <string name="login_or_sign">登录/注册</string>
    <string name="logout">退出登录</string>
    <string name="switch_user">切换账号</string>
    <string name="github"><u>Github</u></string>
    <string name="gitee"><u>Gitee</u></string>
    <string name="delete_file">删除文件</string>
    <string name="scan_code">扫码</string>
    <string name="share_qrcode">分享二维码</string>
    <string name="donate"><u>捐赠</u></string>
    <string name="check_update">检查更新</string>
    <string name="dev">作者: 冬日暖雨</string>
    <string name="sort">排序</string>
    <string name="password_update_success">密码修改成功</string>
    <string name="tip_cache_path">请前往设置，设置缓存路径</string>
    <string name="all_select">全选</string>
    <string name="reverse_select">反选</string>
    <string name="all_unselect">全不选</string>

</resources>