<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/create_folder"
        android:title="@string/mkdir" />

    <item
        android:id="@+id/detail"
        android:title="@string/detail" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/baseline_download_for_offline_24"
        android:title="@string/download"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move"
        android:title="@string/move"
        android:visible="false" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete_outline_24"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>